# aissistant

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  auth.py  docker-compose.yml  env.example  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  mypy-run.yml  mypy.yml
alembic/: env.py
alembic/versions/: 2b6047b1f3b4_initial_migration.py  5ae1426aa0db_create_injury_model.py  f1468adc9ee1_add_exercises_logs.py
app/: main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: events.py  exercises.py  injuries.py  proofs_of_concept.py
app/core/: config.py
app/db/: crud.py  database.py  schemas.py
app/db/models/: exercise_logs.py  injury.py  user.py
app/services/: calendar_reader.py  doctor.py  events_manager.py  exercise_logger.py  llm_handler.py  trainer.py
app/utils/: google_calendar.py
tests/: conftest.py
tests/services/events_manager/: test_get_today_s_summary.py
tests/services/exercise_logger/: test_log_exercise.py
