[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "aissistant"
version = "0.1.0"

[tool.setuptools]
packages = ["app"]
include-package-data = true

[tool.setuptools.package-data]
exclude = ["alembic*"]

[tool.isort]
profile = "black"  # Critical for compatibility
line_length = 88   # Must match black's default